style.css
/* ... */
.toggle-button .menu-bar-middle {
  margin-top: 7px;
  margin-bottom: 7px;
  top: 4px;
}

.toggle-button .menu-bar-bottom {
  border-top: none;
  top: 22px;
}

.button-open .menu-bar-top {
  transform: rotate(45deg) translate(8px, 8px);
  -webkit-transform: rotate(45deg) translate(8px, 8px);
  -moz-transform: rotate(45deg) translate(8px, 8px);
  -ms-transform: rotate(45deg) translate(8px, 8px);
  -o-transform: rotate(45deg) translate(8px, 8px);
  -webkit-transition: .5s;
  -o-transition: .5s;
  transition: .5s;
}

.button-open .menu-bar-middle {
  transform: translate(200%);
  -webkit-transform: translate(200%);
  -moz-transform: translate(200%);
  -ms-transform: translate(200%);
  -o-transform: translate(200%);
  -webkit-transition: .1s ease-in;
  -o-transition: .1s ease-in;
  transition: .1s ease-in;
  opacity: 0;
}

.button-open .menu-bar-bottom {
  transform: rotate(-45deg) translate(8px, -7px);
  -webkit-transform: rotate(-45deg) translate(8px, -7px);
  -moz-transform: rotate(-45deg) translate(8px, -7px);
  -ms-transform: rotate(-45deg) translate(8px, -7px);
  -o-transform: rotate(-45deg) translate(8px, -7px);
  -webkit-transition: .5s;
  -o-transition: .5s;
  transition: .5s;
}

.logo-mobile {
  position: fixed;
  left: 15px;
  z-index: 12;
}

@media screen and (min-width: 530px) {
  .overlay .overlay-content .closebtn {
      top: 30%;
  }
}

@media screen and (min-width: 769px) {
  button {
      font-size: 2.2rem;
  }
  
  .overlay .overlay-content .closebtn {
      top: 50%;
  }
}
      
@media screen and (min-width: 980px) {
  .mobile-icon, .logo-mobile {
      opacity: 0;
      pointer-events: none;
  }
  
  .overlay .overlay-content .closebtn {
      top: 80px;
      right: 45px;
  }
}

@media screen and (min-width: 1100px) {
  .overlay .overlay-content .closebtn {
      top: 125px;
  }
}

@media screen and (min-width: 1350px) {
  .overlay .overlay-content .closebtn {
      top: 175px;
  }
}

@media screen and (min-width: 1650px) {
  .overlay .overlay-content .closebtn {
      top: 250px;
      right: 70px;
  }
}

@media screen and (min-width: 1850px) {
  .overlay .overlay-content .closebtn {
      top: 350px;
  }
}

.container {
  margin: 0 auto;
  width: 250px;
  padding: 60px 7px;
  text-align: center;
}

@media screen and (min-width: 530px) {
  .container {
      width: 450px;
      padding-left: 30px;
      padding-right: 30px;
  }
  
  body { font-size: 1.1rem; }
}

@media screen and (min-width: 750px) {    
  .container { width: 650px; } 
  
  h2 { font-size: 2.3rem; }
  
  h3 { font-size: 2rem; }
  
  h4 { font-size: 1.7rem; }
}

@media screen and (min-width: 980px) {
  .container { width: 800px; }
  
  body { font-size: 1.2rem; }
  
  h2 { font-size: 2.7rem; }
  
  h3 { font-size: 2.5rem; }
  
  h3 { font-size: 2rem; }
  
/*    turn to desktop nav */
}

@media screen and (min-width: 1200px) {
  .container { width: 1200px; }
  
  body { font-size: 1.3rem; }    
}

@media screen and (min-width: 1500px) {
  /* .container { width: 1080px; } */
}


/* ==== GRID SYSTEM ===== */

.row {
  margin-right: -40px;
}

.col {
  float: left;
  width: 100%;
  padding-right: 40px;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

.col-xs-11 { width: 91.662%; }
.col-xs-10 { width: 83.332%; }
.col-xs-9  { width: 75%;     }
.col-xs-8  { width: 66.662%; }
.col-xs-7  { width: 58.331%; }
.col-xs-6  { width: 50%;     }
.col-xs-5  { width: 41.662%; }
.col-xs-4  { width: 33.332%; }
.col-xs-3  { width: 25%;     }
.col-xs-2  { width: 16.662%; }
.col-xs-1  { width: 8.332%;  }

@media screen and (min-width: 750px) {
  .col-sm-11 { width: 91.662%; }
  .col-sm-10 { width: 83.332%; }
  .col-sm-9  { width: 75%;     }
  .col-sm-8  { width: 66.662%; }
  .col-sm-7  { width: 58.331%; }
  .col-sm-6  { width: 50%;     }
  .col-sm-5  { width: 41.662%; }
  .col-sm-4  { width: 33.332%; }
  .col-sm-3  { width: 25%;     }
  .col-sm-2  { width: 16.662%; }
  .col-sm-1  { width: 8.332%;  }
}

@media screen and (min-width: 980px) {
  .col-md-11 { width: 91.662%; }
  .col-md-10 { width: 83.332%; }
  .col-md-9  { width: 75%;     }
  .col-md-8  { width: 66.662%; }
  .col-md-7  { width: 58.331%; }
  .col-md-6  { width: 50%;     }
  .col-md-5  { width: 41.662%; }
  .col-md-4  { width: 33.332%; }
  .col-md-3  { width: 25%;     }
  .col-md-2  { width: 16.662%; }
  .col-md-1  { width: 8.332%;  }    
}

@media screen and (min-width: 1200px) {
  .col-lg-11 { width: 91.662%; }
  .col-lg-10 { width: 83.332%; }
  .col-lg-9  { width: 75%;     }
  .col-lg-8  { width: 66.662%; }
  .col-lg-7  { width: 58.331%; }
  .col-lg-6  { width: 50%;     }
  .col-lg-5  { width: 41.662%; }
  .col-lg-4  { width: 33.332%; }
  .col-lg-3  { width: 25%;     }
  .col-lg-2  { width: 16.662%; }
  .col-lg-1  { width: 8.332%;  }    
}


/* ==== CLEARFIXES ==== */

.row:before,
.row:after,
.group:before,
.group:after {
  content: "";
  display: table;
}

.row:after,
.group:after {
  clear: both;
}

.row,
.group {
  zoom: 1;
}


.button {
  position: absolute;
  padding: 20px 30px;
  background-color: #aee238;
  border-radius: 15px;
  font-size: 1.2rem;
  color: #222;
  -webkit-transition: all 0.5s;
  -o-transition: all 0.5s;
  transition: all 0.5s;
}

.button:hover {
  background-color: #4dbb04;
  color: #222;
  -webkit-transform: scale(0.85);
      -ms-transform: scale(0.85);
          transform: scale(0.85);
}

button:focus { outline: none; }

.fade-left > *,
.fade-right > *,
.fade-up > *,
.fade-up-2 > *,
.fade-up-3 > *,
.fade-down > * {
    -webkit-transition: ease opacity .7s, ease transform .7s;
    -o-transition: ease opacity .7s, ease transform .7s;
    transition: ease opacity .7s, ease transform .7s;
}

.fade-in > * { -webkit-transition: ease opacity .9s; -o-transition: ease opacity .9s; transition: ease opacity .9s; }
.fade-in > * { -webkit-transition-delay: .1s; -o-transition-delay: .1s; transition-delay: .1s }

.fade-up-2 > *:nth-child(2n+2) {-webkit-transition-delay: .1s;-o-transition-delay: .1s;transition-delay: .1s;}
/* ... */

